[gd_scene load_steps=3 format=3 uid="uid://bnndte3m86yya"]

[ext_resource type="Script" path="res://src/game/Components/ShootingComponent.gd" id="1_d0yy7"]
[ext_resource type="PackedScene" uid="uid://hikgoqd4hprn" path="res://src/towers/projectiles/projectile.tscn" id="2_npfwv"]

[node name="ShootingComponent" type="Node2D"]
script = ExtResource("1_d0yy7")
projectile = ExtResource("2_npfwv")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ProjectileSpawn" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="ProjectileSpawn"]
position = Vector2(0, -27)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
